bookdown like running

--- a/vl_01.md
+++ b/vl_01.md
@@ -22,7 +22,7 @@ Data Science umfasst unter anderem folgende Aufgaben:
 
 6.  Daten Reduktion
 
-# Wie passiert die Datenanalyse?
+## Wie passiert die Datenanalyse?
 
 Mit mathematischen Methoden aus den Bereichen der
 
@@ -42,7 +42,7 @@ bei der Berechnung, Automatisierung, Visualisierung.
 
 > Python ist ein de-facto Standard in Data Science und Machine Learning.
 
-# Was sind Daten?
+## Was sind Daten?
 
 Wie sehen Daten aus?
 
@@ -70,9 +70,9 @@ Und allgemeine Eigenschaften. Sind die Daten
  * interpretierbar
  * geordnet (oder nicht zu ordnen)
 
-# Beispiele
+## Beispiele
 
-## Tabellendaten -- Mietpreise
+### Tabellendaten -- Mietpreise
 
 ![image](bilder/dataframe.png){width="\\textwidth"}
 
@@ -133,11 +133,11 @@ Spalten $x = (x_1,\ldots,x_N)$ und $y = (y_1,\ldots, y_N)$.
     ![Von Kiatdd - Eigenes Werk, CC BY-SA 3.0,
     https://commons.wikimedia.org/w/index.php?curid=37108966](bilder/Correlation_coefficient.png){width="65%"}
 
-## COVID-19 Daten
+### COVID-19 Daten
 
 Vergleiche die Einf&uuml;hrung in *Mathematik f&uuml;r Data Science 1* vom letzten Semester.
 
-## Netflix Prize
+### Netflix Prize
 
 Hierbei geht es darum, ob aus bekannten Bewertungen von vielen verschiedenen Benutzern f&uuml;r viele verschiedene Filme abgeleitet werden kann, ob ein bestimmter Nutzer einen bestimmten Film mag (also positiv bewerten w&uuml;rde).
 
@@ -160,13 +160,13 @@ Gegeben viele (aber bei weitem nicht alle) Eintr&auml;ge in einer riesigen Tabel
 
 Die besten L&ouml;sungen f&uuml;r dieses Problem basieren durchweg auf *Machine Learning* Ans&auml;tzen.
 
-# Python
+## Python
 
 Die Programmiersprache `python` wird uns durchs Semester begleiten. Einfach weil sie so wichtig ist f&uuml;r *Data Science* aber auch weil sie (meiner Meinung nach) einfach zu erlernen und zu benutzen ist.
 
-# Aufgaben
+## Aufgaben
 
-## A1 -- Python
+### A1 -- Python
 
 Bringen sie ihr `python` zum Laufen, installieren sie `numpy`, `scipy` und `matplotlib` und f&uuml;hren sie das folgende script aus.
 
@@ -189,7 +189,7 @@ plt.semilogy(xdata, ydata, '.')
 plt.show()
 ```
 
-## A2 -- Einheitsmatrix
+### A2 -- Einheitsmatrix
 
 Schreiben sie ein script, dass die `5x5` Einheitsmatrix auf 3 verschiedene Arten erzeugt. (Eine Art k&ouml;nnte die eingebaute `numpy` Funktion `eye` sein).
 
@@ -202,7 +202,7 @@ print(idfive)
 
 Hinweis: schauen sie sich mal an wie `numpy`'s `arrays` funktionieren. 
 
-## 3 -- Matrizen Multiplikation und Potenz
+### 3 -- Matrizen Multiplikation und Potenz
 
 Schreiben sie ein script, das die &Uuml;bungsaufgabe aus der Vorlesung (potenzieren der Matrizen $M_i$, $i=1,2,3,4$) l&ouml;st. Zum Beispiel mit
 
