--- a/vl_01.md
+++ b/vl_01.md
@@ -122,16 +122,15 @@ Spalten $x = (x_1,\ldots,x_N)$ und $y = (y_1,\ldots, y_N)$.
 
 -   Korrelation $\rho_{xy} = \frac{s_{xy}}{s_x\cdot s_y} \in [-1,1]$.
 
-    $\rho \approx 1$: Starke positive Korrelation, wenn $x$ groß ist,
+  * $\rho \approx 1$: Starke positive Korrelation, wenn $x$ groß ist,
     ist $y$ auch groß.
 
-    $\rho \approx -1$: Starke negative Korrelation, wenn $x$ groß ist,
+  * $\rho \approx -1$: Starke negative Korrelation, wenn $x$ groß ist,
     ist $y$ klein
 
-    $\rho \approx 0$: Wenig/keine Korrelation.
+  * $\rho \approx 0$: Wenig/keine Korrelation.
 
-    ![Von Kiatdd - Eigenes Werk, CC BY-SA 3.0,
-    https://commons.wikimedia.org/w/index.php?curid=37108966](bilder/Correlation_coefficient.png){width="65%"}
+![Von Kiatdd - Eigenes Werk, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=37108966](bilder/Correlation_coefficient.png){width="65%"}
 
 ### COVID-19 Daten
 
