--- a/vl_01.md
+++ b/vl_01.md
@@ -18,7 +18,7 @@ Data Science umfasst unter anderem folgende Aufgaben:
 
 4.  Data Visualization (Hypothesen graphisch kommunizieren)
 
-5.  Modelle erzeugen/validieren (Regeln/Muster erkennen, Vorhersagen treffen) -- das ist Machine Learning aber es gibt auch viele andere Ans&auml;tze.
+5.  Modelle erzeugen/validieren (Regeln/Muster erkennen, Vorhersagen treffen) -- *das* ist Machine Learning aber es gibt auch viele andere Ans&auml;tze.
 
 6.  Daten Reduktion
 
