some more beauties

--- a/vl_01.md
+++ b/vl_01.md
@@ -1,10 +1,3 @@
----
-title: Einführung in die mathematische Datenanalyse
-subtitle: Vorlesung 1
-author: Jan Heiland
-date: 27. April 
----
-
 # Was ist Data Science? 
 
 Data Science umfasst unter anderem folgende Aufgaben:
@@ -62,7 +55,7 @@ Wie sehen Daten aus?
 
 -   reiner Text, z.B. Freitext in Restaurantbewertung
 
-Und allgemeine Eigenschaften. Sind die Daten 
+Au&szlig;erdem k&ouml;nnen wir noch allgemeine Eigenschaften (Qualit&auml;tsmerkmale) von Daten unterscheiden
 
  * strukturiert
  * l&uuml;ckenhaft
@@ -74,7 +67,7 @@ Und allgemeine Eigenschaften. Sind die Daten
 
 ### Tabellendaten -- Mietpreise
 
-![image](bilder/dataframe.png){width="\\textwidth"}
+![Abbildung: Tabelle von Wohnungsangeboten](bilder/dataframe.png){width="\\textwidth"}
 
 Hier w&auml;ren die Aufgaben von Data Science: 
 
@@ -83,7 +76,7 @@ Variablen aufdecken,
  * visualisieren. 
  * Gegebenenfalls fehlende Eintr&auml;ge bei (z.B.) `kaltmiete` vorhersagen
 
-![image](bilder/dataframe_spalte.pdf){width="\\textwidth"}
+![Abbildung: Eine Spalte der Tabelle](bilder/dataframe_spalte.png){width="\\textwidth"}
 
 Datenexploration und -analyse für einzelne Variablen 1/3 Wir betrachten
 eine *numerische* Variable in einem rechteckigen Datensatz, also eine
@@ -109,10 +102,10 @@ zu verstehen:
 Datenexploration und -analyse für mehrere Variablen Wir betrachten zwei
 Spalten $x = (x_1,\ldots,x_N)$ und $y = (y_1,\ldots, y_N)$.\
 
-**Scatter Plot**
+Das Verteilung von zwei Variablen l&auml;&szlig;t sich im sogenannte **Scatter Plot** visualisieren.
 
-![image](bilder/dataframe_spalte3.pdf){width="27%"}
-![image](bilder/scatterplot.pdf){width="70%"}
+![Kaltmiete versus Wohnfl&auml;che](bilder/dataframe_spalte3.png){width="27%"}
+![als Scatterplot](bilder/scatterplot.png){width="70%"}
 
 Datenexploration und -analyse für mehrere Variablen Wir betrachten zwei
 Spalten $x = (x_1,\ldots,x_N)$ und $y = (y_1,\ldots, y_N)$.
@@ -148,14 +141,14 @@ Ziel der Datenanalyse war es, f&uuml;r `2817131` "Paare" von Benutzern und Filme
 
 Das Problem lie&szlig;e sich wie folgt darstellen.
 
-| Benutzer \\ Film | `1` | `2` | `...` | `n` | `...` |
-| --- | --- | --- | --- | --- | --- |
-| `1` | -- | 3 | `...` | 5 | `...` |
-| `2` | 3 | 4 | `...` | 2 | `...` |
-| `3` | 1 | 2 | `...` | **?** | `...` |
+| Benutzer \\ Film | `F1` | `F2` | `...` | `Fn` | `...` |
+| :---: | :---: | :---: | :---: | :---: | :---: |
+| `B1` | -- | 3 | `...` | 5 | `...` |
+| `B2` | 3 | 4 | `...` | 2 | `...` |
+| `B3` | 1 | 2 | `...` | **?** | `...` |
 | `...` | 3 | 4 | `...` | -- | `...` |
 
-Gegeben viele (aber bei weitem nicht alle) Eintr&auml;ge in einer riesigen Tabelle. K&ouml;nnen wir aus den Zusammenhängen bestimmte fehlende Eintr&auml;ge (z.B. wie findet Nutzer `3` den Film `n`) herleiten?
+Gegeben viele (aber bei weitem nicht alle) Eintr&auml;ge in einer riesigen Tabelle. K&ouml;nnen wir aus den Zusammenhängen bestimmte fehlende Eintr&auml;ge (z.B. wie findet Nutzer `B3` den Film `Fn`) herleiten?
 
 Die besten L&ouml;sungen f&uuml;r dieses Problem basieren durchweg auf *Machine Learning* Ans&auml;tzen.
 
