--- a/vl_01.md
+++ b/vl_01.md
@@ -158,7 +158,7 @@ Die Programmiersprache `python` wird uns durchs Semester begleiten. Einfach weil
 
 ## Aufgaben
 
-### A1 -- Python
+### Python
 
 Bringen sie ihr `python` zum Laufen, installieren sie `numpy`, `scipy` und `matplotlib` und f&uuml;hren sie das folgende script aus.
 
@@ -181,7 +181,7 @@ plt.semilogy(xdata, ydata, '.')
 plt.show()
 ```
 
-### A2 -- Einheitsmatrix
+### Einheitsmatrix
 
 Schreiben sie ein script, dass die `5x5` Einheitsmatrix auf 3 verschiedene Arten erzeugt. (Eine Art k&ouml;nnte die eingebaute `numpy` Funktion `eye` sein).
 
@@ -194,7 +194,7 @@ print(idfive)
 
 Hinweis: schauen sie sich mal an wie `numpy`'s `arrays` funktionieren. 
 
-### 3 -- Matrizen Multiplikation und Potenz
+### Matrizen Multiplikation und Potenz
 
 Schreiben sie ein script, das die &Uuml;bungsaufgabe aus der Vorlesung (potenzieren der Matrizen $M_i$, $i=1,2,3,4$) l&ouml;st. Zum Beispiel mit
 
