--- a/vl_02.md
+++ b/vl_02.md
@@ -200,7 +200,7 @@ Praktischerweise tritt genau diese Situation im Allgemeinen ein.
 
 ## Beispiel
 
-Unsere Covid-Zahlen mit einer geraden angen&auml;hert:
+Unsere Covid-Zahlen "mit einer Geraden angen&auml;hert":
 
  * $f_w(x) = w_1 + w_2 x$ -- das hei&szlig;t $n=2$ und Basisfunktionen $b_1(x)\equiv 1$ und $b_2(x) = x$ 
  * $\mathbf x = (1,2,3, \dots, 31)$ -- die Tage im Februar, das hei&szlig;t $N=31$
@@ -217,8 +217,8 @@ Wir bekommen
 (die Spalten sind linear unabh&auml;ngig) und m&uuml;ssen "nur" das 2x2 System
 $$
 \begin{bmatrix}
-1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots \\ 1 & 31
-\end{bmatrix}^T
+1 & 1 & 1 & \hdots & 1 \\ 1 & 2 & 3 & \hdots & 31
+\end{bmatrix}
 \begin{bmatrix}
 1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots \\ 1 & 31
 \end{bmatrix}
@@ -227,8 +227,11 @@ w_1 \\ w_2
 \end{bmatrix}
 =
 \begin{bmatrix}
-1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots \\ 1 & 31
-\end{bmatrix}^T \mathbf y
+1 & 1 & 1 & \hdots & 1 \\ 1 & 2 & 3 & \hdots & 31
+\end{bmatrix} 
+\begin{bmatrix}
+352 \\  347 \\ 308 \\ \vdots \\ 2615
+\end{bmatrix} 
 $$
 l&ouml;sen um die Approximation $f_w$ zu bestimmen.
 
