--- a/vl_02.md
+++ b/vl_02.md
@@ -211,13 +211,13 @@ Wir bekommen
 \begin{equation*}
 \Phi(\mathbf x) = 
 \begin{bmatrix}
-1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots \\ 1 & 31
+1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots & \vdots \\ 1 & 31
 \end{bmatrix}
 \end{equation*}
 (die Spalten sind linear unabh&auml;ngig) und m&uuml;ssen "nur" das 2x2 System
 $$
 \begin{bmatrix}
-1 & 1 & 1 & \hdots & 1 \\ 1 & 2 & 3 & \hdots & 31
+1 & 1 & 1 & \dots & 1 \\ 1 & 2 & 3 & \dots & 31
 \end{bmatrix}
 \begin{bmatrix}
 1 & 1 \\ 1 & 2 \\ 1 & 3 \\ \vdots \\ 1 & 31
@@ -227,7 +227,7 @@ w_1 \\ w_2
 \end{bmatrix}
 =
 \begin{bmatrix}
-1 & 1 & 1 & \hdots & 1 \\ 1 & 2 & 3 & \hdots & 31
+1 & 1 & 1 & \dots & 1 \\ 1 & 2 & 3 & \dots & 31
 \end{bmatrix} 
 \begin{bmatrix}
 352 \\  347 \\ 308 \\ \vdots \\ 2615
