--- a/vl_02.md
+++ b/vl_02.md
@@ -60,13 +60,13 @@ Unter diesem Gesichtspunkt ist eine Funktion, die
 
 > $f(x_i)=y_i$
 
-nicht zielführend. (Wir wollen Trends und gr&ouml;&szlig;ere Zusammenhänge erkennen und nicht kleine Fehler nachzeichnen.) Das zu strenge Anpassen an m&ouml;glicherweise verrauschte Daten wird **overfitting** genannt.
+erzwingt nicht zielführend. (Wir wollen Trends und gr&ouml;&szlig;ere Zusammenhänge erkennen und nicht kleine Fehler nachzeichnen.) Das zu strenge Anpassen an m&ouml;glicherweise verrauschte Daten wird **overfitting** genannt.
 
 Vielmehr werden wir nach einer Funktion $f$ suchen, die die Daten n&auml;herungsweise nachstellt: 
 
 > $f(x_i)\approx y_i$
 
-Hierbei passen jetzt auch Funktionen, die vielleicht einfach zu handhaben sind aber die Daten kaum noch repr&auml;sentieren. Jan spricht von **underfitting**.
+Hierbei passen jetzt allerdings auch Funktionen, die vielleicht einfach zu handhaben sind aber die Daten kaum noch repr&auml;sentieren. Jan spricht von **underfitting**.
 
 Eine gute Approximation besteht im Kompromiss von *nah an den Daten* aber mit wenig *overfitting*.
 
@@ -97,7 +97,7 @@ von Basisfunktionen geschrieben wird und dann die *Koeffizienten* $w_i$ so besti
 
 Typische Wahlen f&uuml;r die Basis $\{b_1, b_2, \dotsc, b_n\}$ sind
 
- * Polynome: $\{1, x, x^2, \dotsc, x^{N-1}\}$ -- f&uuml;r $N=2$ ist der Ansatz *eine Gerade*
+ * Polynome: $\{1, x, x^2, \dotsc, x^{n-1}\}$ -- f&uuml;r $n=2$ ist der Ansatz *eine Gerade*
  * Trigonometrische Funktionen: $\{1, \cos(x), \sin(x), \cos(2x), \sin(2x), \dotsc\}$
  * Splines -- Polynome, die abschnittsweise definiert werden
  * Wavelets -- Verallgemeinerungen von trigonometrischen Funktionen
@@ -108,7 +108,7 @@ Wir setzen nun also an
 \begin{equation*}
 f_w(x) = \sum_{j=1}^nw_j b_j (x)
 \end{equation*}
-und wollen damit $y_i \approx f_w(x_i)$ *bestmöglich* erreichen (indem wir die Koeffizienten $(w_1, \dotsc, w_N)$ *optimal* w&auml;hlen. Bestmöglich und optimal spezifizieren wir &uuml;ber den Mittelwert der quadratischen Abweichungen in der Approximation &uuml;ber alle Datenpunkte
+und wollen damit $y_i \approx f_w(x_i)$ *bestmöglich* erreichen (indem wir die Koeffizienten $(w_1, \dotsc, w_n)$ *optimal* w&auml;hlen. Bestmöglich und optimal spezifizieren wir &uuml;ber den Mittelwert der quadratischen Abweichungen in der Approximation &uuml;ber alle Datenpunkte
 \begin{equation*}
 \frac{1}{N}\sum_{i=1}^N (y_i - f_w(x_i))^2
 \end{equation*}
@@ -157,23 +157,23 @@ Damit, mit $\mathbf y$ als den Vektor aller $y_i$'s, und mit der Definition der 
 Wir bemerken, dass
 
  * das Fehlerfunktional immer gr&ouml;&szlig;er und bestenfalls gleich 0 ist
- * falls das lineare Gleichungssystem $\Phi (\mathbf x)w = \mathbf y$ eine L&ouml;sung hat $w$, ist das auch eine L&ouml;sung unserer Minimierung
- * im typischen Falle aber ist allerdings $N\gg n$ und das System &uuml;berbestimmt ($n=N$ w&uuml;rde ein overfitting bedeuten...) sodass wir keine L&ouml;sung erwarten k&ouml;nnen.
+ * falls das lineare Gleichungssystem $\Phi (\mathbf x)w = \mathbf y$ eine L&ouml;sung $w$ hat, ist das auch eine L&ouml;sung unserer Minimierung
+ * im typischen Falle aber ist allerdings $N\gg n$ und das System &uuml;berbestimmt ($n=N$ w&uuml;rde ein overfitting bedeuten...) sodass wir keine L&ouml;sung des linearen Gleichungssystems erwarten k&ouml;nnen.
  * Das Minimierungsproblems selbst hat allerdings immer eine L&ouml;sung. 
 
 ## Berechnung der Bestl&ouml;sung
 
-Wir suchen also ein Minimum der Funktion
+Wir suchen also ein Minimum der Funktion (mit $\Phi$, $\mathbf x$, $\mathbf y$ gegeben)
 \begin{equation*}
 \begin{split}
-w \mapsto \frac 12 \|\mathbf y - \Phi(\mathbf x) \|^2 &= \frac 12 (\mathbf y - \Phi(\mathbf x)w)^T(\mathbf y - \Phi(\mathbf x)w)  \\ 
-&= \frac 12 [\mathbf y^T\mathbf y -y^T \Phi(\mathbf x)w - w^T \Phi(\mathbf x)^T\mathbf y  + w^T \Phi(\mathbf x)^T\Phi(\mathbf x)w] \\
+w \mapsto \frac 12 \|\mathbf y - \Phi(\mathbf x)w \|^2 &= \frac 12 (\mathbf y - \Phi(\mathbf x)w)^T(\mathbf y - \Phi(\mathbf x)w)  \\ 
+&= \frac 12 [\mathbf y^T\mathbf y - \mathbf y^T \Phi(\mathbf x)w - w^T \Phi(\mathbf x)^T\mathbf y  + w^T \Phi(\mathbf x)^T\Phi(\mathbf x)w] \\
 &= \frac 12 [\mathbf y^T\mathbf y -2 w^T \Phi(\mathbf x)^T\mathbf y  + w^T \Phi(\mathbf x)^T\Phi(\mathbf x)w] 
 \end{split}
 \end{equation*}
-wobei wir die Definition der Norm $\|v\|^2 = v^Tv$ und die Eigenschaft, dass f&uuml;r die skalare Gr&ouml;&szlig;e $w^T \Phi(\mathbf x)^T\mathbf y = (w^T \Phi(\mathbf x)^T\mathbf y)^T = \mathbf y^T \Phi(\mathbf x)w$ gilt, ausgenutzt haben.
+wobei wir die Definition der Norm $\|v\|^2 = v^Tv$ und die Eigenschaft, dass f&uuml;r die skalare Gr&ouml;&szlig;e $w^T \Phi(\mathbf x)^T\mathbf y = [w^T \Phi(\mathbf x)^T\mathbf y]^T = \mathbf y^T \Phi(\mathbf x)w$ gilt, ausgenutzt haben.
 
-W&auml;ren $w$ und $y$ keine Vektoren sondern einfach reelle Zahlen, w&auml;re das hier eine Parabelgleichung $aw^2 + bw + c$ mit $a>0$, die immer eine Minimalstelle hat.
+W&auml;ren $w$ und $\mathbf y$ keine Vektoren sondern einfach reelle Zahlen, w&auml;re das hier eine Parabelgleichung $aw^2 + bw + c$ mit $a>0$, die immer eine Minimalstelle hat.
 
 Tats&auml;chlich gilt hier alles ganz analog. Insbesondere ist $\Phi(\mathbf x)^T\Phi(\mathbf x)$ in der Regel "gr&ouml;&szlig;er 0" (was hei&szlig;t das wohl bei quadratischen Matrizen?). Und mittels "Nullsetzen" der ersten Ableitung k&ouml;nnen wir das Minimum bestimmen. In diesem Fall ist die erste Ableitung (nach $w$)
 \begin{equation*}
@@ -196,7 +196,7 @@ Letzte Frage: Wann hat dieses Gleichungssystems eine eindeutige L&ouml;sung? Mit
 Praktischerweise tritt genau diese Situation im Allgemeinen ein. 
 
  * $N>n$ (mehr Datenpunkte als Parameter)
- * $b_i$'s werden als *linear unabh&auml;ngige* (im Sinne von Funktionenr&auml;umen) gewählt (was die lineare unabh&auml;ngigket der $b_i(\mathbf x)$ impliziert.
+ * $b_i$'s werden als *linear unabh&auml;ngig* (im Sinne ihres Funktionenraums) gewählt, was die lineare unabh&auml;ngigket der $b_i(\mathbf x)$ impliziert.
 
 ## Beispiel
 
