--- a/vl_03.md
+++ b/vl_03.md
@@ -68,9 +68,116 @@ Wir halten zun&auml;chst mal fest, dass
 
 Allerdings, wie Sie als &Uuml;bungsaufgabe nachweisen werden, l&ouml;st dieser Ansatz tats&auml;chlich das Optimierungsproblem.
 
+## Singul&auml;rwertzerlegung 
+
+Eine weitere Matrix Zerlegung, die eng mit der L&ouml;sung von Optimierungsproblemen oder &uuml;berbestimmten Gleichungssystemen zusammenh&auml;ngt ist die *Singul&auml;rwertzerlegung* (SVD -- von english: *Singular Value Decomposition*).
+
+::: {.theorem name="Singul&auml;rwertzerlegung" #svd}
+Sei $A\in \mathbb C^{m\times n}$, $m\geq n$. Dann existieren orthogonale Matrizen $U \in \mathbb C^{m\times m}$ und $V\in \mathbb C^{n\times n}$ und eine Matrix $\Sigma \in \mathbb R^{m\times n}$ der Form
+\begin{equation*}
+\Sigma = 
+\begin{bmatrix}
+\sigma_1 & 0 & \dots & 0\\
+0 & \sigma_2 &\ddots & \vdots\\
+0 & \ddots & \ddots &0\\
+  0 & \dots&0 & \sigma_n \\
+  0 & 0 & \dots & 0 \\
+  \vdots & \ddots &  & \vdots\\
+  0 & 0 & \dots & 0
+\end{bmatrix}
+\end{equation*}
+mit reellen sogenannten *Singul&auml;rwerten*
+\begin{equation*}
+\sigma_1 \geq \sigma_2 \geq \dots \geq \sigma_n \geq 0
+\end{equation*}
+sodass gilt
+\begin{equation*}
+A = U \Sigma V^*
+\end{equation*}
+wobei gilt $V^* = \overline{V^T}$ (transponiert und komplex konjugiert).
+:::
+
+Ein paar Bemerkungen. 
+
+ * Ist $A$ reell, k&ouml;nnen auch $U$ und $V$ reell gew&auml;hlt werden.
+ * Die Annahme $m \geq n$ war nur n&ouml;tig um f&uuml;r die Matrix $\Sigma$ keine Fallunterscheidung zu machen. (F&uuml;r $m\leq n$ "steht der Nullblock rechts von den Singul&auml;rwerten"). Insbesondere gilt $A^* = V\Sigma U^*$ ist eine SVD von $A^*$.
+ * Eine Illustration der Zerlegung ist in Abbildung \@ref(SVD) zu sehen.
+
+Wir machen einige &Uuml;berlegungen im Hinblick auf gro&szlig;e Matrizen. Sei dazu $m>n$, $A\in \mathbb C^{m\times n}$ und $A=U\Sigma V^*$ eine SVD wie in Theorem \@ref{thm:SVD}. Sei nun
+\begin{equation*}
+U = \begin{bmatrix}
+U_1 & U_2
+\end{bmatrix}
+% = \begin{bmatrix} V_1^* & V_2^*
+\end{equation*}
+partitioniert sodass $U_1$ die ersten $n$ Spalten von $U$ enth&auml;lt.
+
+Dann gilt (nach der Matrix-Multiplikations Regel *Zeile mal Spalte* die Teile $U_2$ und $V_2$ immer mit dem Nullblock in $\Sigma$ multipliziert werden) dass
+\begin{equation*}
+A = U\Sigma V = 
+\begin{bmatrix}
+U_1 & U_2
+\end{bmatrix}
+\begin{bmatrix}
+\hat \Sigma \\ 0
+\end{bmatrix}
+V^*
+% \begin{bmatrix} V_1^* \\ V_2^* \end{bmatrix}
+=
+U_1 
+\hat \Sigma
+V^*
+% \begin{bmatrix} V_1^* \\ V_2^* \end{bmatrix}
+\end{equation*}
+Es gen&uuml;gt also nur die ersten $m$ Spalten von $U$ zu berechnen. Das ist die sogenannte **slim SVD**.
+
+Hat, dar&uuml;berhinaus, die Matrix $A$ keinen vollen Rang, also $\operatorname{Rg}(A) = r < n$, dann:
+
+ * ist $\sigma_i=0$, f&uuml;r alle $i=r+1, \dotsc, n$, (wir erinnern uns, dass die Singul&auml;rwerte nach Gr&ouml;&szlig;e sortiert sind)
+ * die Matrix $\hat \Sigma$ hat $n-r$ Nullzeilen
+ * f&uuml;r die Zerlegung sind nur die ersten $r$ Spalten von $U$ und $V$ relevant -- die sogenannte **Kompakte SVD**.
+
+In der Datenapproximation ist au&szlig;erdem die **truncated SVD** von Interesse. Dazu sei $\hat r<r$ ein beliebig gew&auml;hlter Index. Dann werden alle Singul&auml;rwerte,  $\sigma_i=0$, f&uuml;r alle $i=\hat r+1, \dotsc, n$, abgeschnitten -- das hei&szlig;t null gesetzt und die entsprechende *kompakte SVD* berechnet.
+
+Hier gilt nun nicht mehr die Gleichheit in der Zerlegung. Vielmehr gilt 
+\begin{equation*}
+A \approx A_{\hat r}
+\end{equation*}
+wobei $A_{\hat r}$ aus der *truncated SVD* von $A$ erzeugt wurde. Allerdings ist diese Approximation von $A$ durch optimal in dem Sinne, dass es keine Matrix vom Rang $\hat r \geq r=\operatorname{Rg}(A)$ gibt, die $A$ (in der *induzierten* euklidischen Norm[^1]) besser approximiert. Es gilt
+\begin{equation*}
+\min_{B\in \mathbb C^{m\times n}, \operatorname{Rg}(B)=\hat r} \|A-B\|_2 = \|A-A_{\hat r}\|_2 = \sigma_{\hat r + 1};
+\end{equation*}
+vgl. Bollhoefer/Mehrmann Satz 14.15.
+
+Zum Abschluss noch der Zusammenhang zum Optimierungsproblem. Ist $A=U\Sigma V^*$ "SV-zerlegt", dann gilt
+\begin{equation*}
+A^*Aw = V\Sigma^*U^*U\Sigma V^*w = V\hat \Sigma^2 V^* 
+\end{equation*}
+und damit
+\begin{equation*}
+A^*Aw = A^*y \quad \Leftrightarrow \quad V\hat \Sigma^2 V^*  = V\Sigma^*U^*y \quad \Leftrightarrow \quad w = V(\Sigma^+)^*U^*y
+\end{equation*}
+wobei
+\begin{equation*}
+\Sigma^+ = \begin{bmatrix}
+\hat \Sigma^{-1} \\ 0_{m-n \times n}
+\end{bmatrix}
+\end{equation*}
+aus $\Sigma \hat \Sigma^{-1}\hat \Sigma^{-1}$ herr&uuml;hrt.
+
+**Bemerkung**: $\Sigma^+$ kann auch definiert werden, wenn $\hat \Sigma$ nicht invertierbar ist (weil manche Diagonaleintr&auml;ge null sind). Dann wird $\hat \Sigma^+$ betrachtet, bei welcher nur die $\sigma_i>0$ invertiert werden und die anderen $\sigma_i=0$ belassen werden. Das definiert eine sogenannte *verallgemeinerte Inverse* und l&ouml;st auch das Optimierungsproblem falls $A$ keinen vollen Rang hat.
+
+
+[^1]: Auf Matriznormen kommen wir noch in der Vorlesung zu sprechen.
+
+
+![Illustration der SVD. Bitte beachten der $*$ bedeutet hier transponiert und komplex konjugiert. By Cmglee - Own work, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=67853297](bilder/03-412px-Singular_value_decomposition_visualisation.svg.png){width=50% #SVD}
+
 ## Aufgaben
 
-### (T) Norm und Orthogonale Transformation
+(T) hei&szlig;t theoretische Aufgabe, (P) hei&szlig;t programmieren.
+
+### Norm und Orthogonale Transformation (T)
 
 Sei $Q\in \mathbb R^{n\times n}$ eine orthogonale Matrix und sei $y\in \mathbb R^{n}$. Zeigen Sie, dass
 \begin{equation*}
@@ -78,7 +185,8 @@ Sei $Q\in \mathbb R^{n\times n}$ eine orthogonale Matrix und sei $y\in \mathbb R
 \end{equation*}
 gilt. 
 
-### (T) QR Zerlegung und Kleinstes Quadrate Problem
+
+### QR Zerlegung und Kleinstes Quadrate Problem (T) 
 
 Sei $A\in \mathbb R^{m,n}$, $m>n$, $A$ hat vollen Rank und sei
 \begin{equation*}
@@ -89,4 +197,31 @@ Q_1 & Q_2
 \hat R \\ 0
 \end{bmatrix} = A
 \end{equation*}
-eine QR-Zerlegung von $A$. Zeigen sie, dass die L&ouml;sung 
+eine QR-Zerlegung von $A$. Zeigen sie, dass die L&ouml;sung von
+\begin{equation*}
+\hat R w = Q_1^T y
+\end{equation*}
+ein kritischer Punkt (d.h. der Gradient $\nabla_w$ verschwindet) von
+\begin{equation*}
+w \mapsto \| Aw - y \|^2
+\end{equation*}
+ist. **Hinweis**: Die Formel f&uuml;r den Gradienten wurde in der Vorlesung 02 hergeleitet.
+
+### Eigenwerte Symmetrischer Matrizen (T)
+
+Zeigen Sie, dass Eigenwerte symmetrischer reeller Matrizen $A\in \mathbb R^{n\times n}$ immer reell sind.
+
+### Singul&auml;rwertzerlegung und Eigenwerte (T)
+
+Zeigen Sie, dass die Singul&auml;rwerte einer Matrix $A\in \mathbb R^{m\times n}$, $m>n$, genau die Eigenwerte der Matrix $A^TA$ sind und in welcher Beziehung sie mit den Eigenwerten von $AA^T$ stehen. **Hinweis**: hier ist "$m>n$" wichtig.
+
+### Python -- Laden und Speichern von Arrays
+
+### Lineare Regression f&uuml;r Covid Daten (P)
+
+### Truncated SVD
+
+SVs plotten
+Formel verifizieren
+
+
