--- a/vl_03.md
+++ b/vl_03.md
@@ -185,6 +185,14 @@ Sei $Q\in \mathbb R^{n\times n}$ eine orthogonale Matrix und sei $y\in \mathbb R
 \end{equation*}
 gilt. 
 
+### Kleinste Quadrate und Mittelwert
+
+Zeigen sie, dass der *kleinste Quadrate* Ansatz zur Approximation einer Datenwolke 
+\begin{equation*}
+(x_i, y_i), \quad i=1,2,\dotsc,N,
+\end{equation*}
+mittels einer konstanten Funktion $f(x)=w_1$ auf $w_1$ als den Mittelwert von $y_i$ f&uuml;hrt.
+
 
 ### QR Zerlegung und Kleinstes Quadrate Problem (T) 
 
