done with exercises

--- a/vl_03.md
+++ b/vl_03.md
@@ -20,7 +20,7 @@ Wir betrachten nochmal das Optimierungsproblem $\min_{w} \| Aw - y \|^2$. G&auml
 Die &Uuml;berlegung ist nun, die Gleichung $Aw=y$ *so gut wie m&ouml;glich* zu erf&uuml;llen, indem wir die relevanten Gleichungen indentifizieren und wenigstens diese l&ouml;sen. Ein systematischer (und wie wir sp&auml;ter sehen werden auch zum Optimierungsproblem passender) Zugang bietet die QR Zerlegung.
 
 ::: {.theorem name="QR Zerlegung" #qr}
-Sei $A\mathbb R^{m\times n}$, $m>n$. Dann existiert eine orthonormale Matrix $Q\in \mathbb R^{m\times m}$ und eine obere Dreiecksmatrix $\hat R\in \mathbb R^{n\times n}$ derart dass
+Sei $A\in \mathbb R^{m\times n}$, $m>n$. Dann existiert eine orthonormale Matrix $Q\in \mathbb R^{m\times m}$ und eine obere Dreiecksmatrix $\hat R\in \mathbb R^{n\times n}$ derart dass
 \begin{equation*}
 A = QR =: Q 
 \begin{bmatrix}
@@ -172,7 +172,7 @@ aus $\Sigma \hat \Sigma^{-1}\hat \Sigma^{-1}$ herr&uuml;hrt.
 
 ## Aufgaben
 
-(T) hei&szlig;t theoretische Aufgabe, (P) hei&szlig;t programmieren.
+Erkl&auml;rung: (T) hei&szlig;t theoretische Aufgabe, (P) hei&szlig;t programmieren.
 
 ### Norm und Orthogonale Transformation (T)
 
@@ -188,8 +188,7 @@ Zeigen sie, dass der *kleinste Quadrate* Ansatz zur Approximation einer Datenwol
 \begin{equation*}
 (x_i, y_i), \quad i=1,2,\dotsc,N,
 \end{equation*}
-mittels einer konstanten Funktion $f(x)=w_1$ auf $w_1$ als den Mittelwert von $y_i$ f&uuml;hrt.
-
+mittels einer konstanten Funktion $f(x)=w_1$ auf $w_1$ auf den Mittelwert der $y_i$ f&uuml;hrt.
 
 ### QR Zerlegung und Kleinstes Quadrate Problem (T) 
 
@@ -254,10 +253,12 @@ plt.show()
 ### Lineare Regression f&uuml;r Covid Daten (P)
 
 F&uuml;hren sie auf den Covid-daten eine lineare Regression zum Fitten
+
 * einer konstanten Funktion $f(x)=c$
 * einer linearen Funktion $f(x) = ax+b$
 * einer quadratischen Funktion $f(x) = w_1 + w_2 x + w_3x^2$
-durch. Berechnen Sie die mittlere quadratische Abweichung $\frac{1}{N}\sum_{i=1}^N\|y_i - f(x_i)\|^2$ f&uuml;r alle F&auml;lle und plotten Sie die Daten zusammen mit der aus der Regression erhaltenen Funktion. Beispielsweise so:
+
+durch. Berechnen Sie die mittlere quadratische Abweichung $\frac{1}{N}\sum_{i=1}^N\|y_i - f(x_i)\|^2$ f&uuml;r alle drei Approximationen und plotten Sie die Covid-Daten zusammen mit der aus der Regression erhaltenen Funktion. Beispielsweise so:
 
 ```py
 import numpy as np
@@ -321,9 +322,16 @@ plt.legend()
 plt.show()
 ```
 
-### Truncated SVD (P)
+**Hinweise**:
 
-Berechnen und plotten sie die Singul&auml;rwerte einer $1000\times 100$ Matrix mit zuf&auml;lligen Eintr&auml;gen und die einer Matrix mit "echten" Daten (hier Simulationsdaten einer Stroemungssimulation)^[wird noch online bereitgestellt].  Berechnen sie den Fehler der *truncated SVD* $\|A-A_{\hat r}\|$ f&uuml;r $\hat r = 10, 20, 40$ f&uuml;r beide Matrizen (und vergleichen sie mit der gegebenen Formel).
+ * `liste = [f(x) for x in iterable]` ist sehr bequem um Vektoren von Funktionswerten zu erzeugen aber nicht sehr *pythonesque* (und auch im Zweifel nicht effizient). Besser ist es Funktionen zu schreiben, die *vektorisiert* sind. Zum Beispiel k&ouml;nnen die meisten *built-in* Funktionen wie `np.exp` ein `array` als Eingang direkt in ein `array` der Funktionswerte umsetzen.
+ * *Eine Funktion, die eine Funktion erzeugt* finde ich sehr hilfreich f&uuml;r viele Anwendungen (ist aber manchmal nicht so gut nachvollziehbar). 
+
+### Truncated SVD (P+T)
+
+ 1. **(P)** Berechnen und plotten sie die Singul&auml;rwerte einer $4000\times 1000$ Matrix mit zuf&auml;lligen Eintr&auml;gen und die einer Matrix mit "echten" Daten (hier Simulationsdaten einer Stroemungssimulation)^[[Download bitte hier]() -- Achtung das sind 370MB].  Berechnen sie den Fehler der *truncated SVD* $\|A-A_{\hat r}\|$ f&uuml;r $\hat r = 10, 20, 40$ f&uuml;r beide Matrizen.
+ 1. **(T)** Was l&auml;sst sich bez&uuml;glich einer Kompression der Daten mittels SVD f&uuml;r die beiden Matrizen sagen. (Vergleichen sie die plots der Singul&auml;rwerte und beziehen sie sich auf die gegebene Formel f&uuml;r die Differenz).
+ 1. **(P+T)** F&uuml;r die "echten" Daten: Speichern sie die Faktoren der bei $\hat r$ abgeschnittenen SVD und vergleichen Sie den Speicherbedarf der Faktoren und der eigentlichen Matrix.
 
 Beispielcode:
 ```py
@@ -331,7 +339,7 @@ import numpy as np
 import scipy.linalg as spla
 import matplotlib.pyplot as plt
 
-randmat = np.random.randn(1000, 100)
+randmat = np.random.randn(4000, 1000)
 
 rndU, rndS, rndV = spla.svd(randmat)
 
@@ -359,4 +367,8 @@ plt.legend()
 plt.show()
 ```
 
+**Hinweise**: 
+
+ * Es gibt viele verschiedene Normen f&uuml;r Vektoren und Matrizen. Sie d&uuml;rfen einfach mit `np.linalg.norm` arbeiten. Gerne aber mal in die Dokumentation schauen *welche* Norm berechnet wird.
+ * Die (T) Abschnitte hier bitte mit den anderen (T) Aufgaben oder als Bildschirmausgabe im Programm.
 
