added data download link

--- a/vl_03.md
+++ b/vl_03.md
@@ -329,7 +329,7 @@ plt.show()
 
 ### Truncated SVD (P+T)
 
- 1. **(P)** Berechnen und plotten sie die Singul&auml;rwerte einer $4000\times 1000$ Matrix mit zuf&auml;lligen Eintr&auml;gen und die einer Matrix mit "echten" Daten (hier Simulationsdaten einer Stroemungssimulation)^[[Download bitte hier]() -- Achtung das sind 370MB].  Berechnen sie den Fehler der *truncated SVD* $\|A-A_{\hat r}\|$ f&uuml;r $\hat r = 10, 20, 40$ f&uuml;r beide Matrizen.
+ 1. **(P)** Berechnen und plotten sie die Singul&auml;rwerte einer $4000\times 1000$ Matrix mit zuf&auml;lligen Eintr&auml;gen und die einer Matrix mit "echten" Daten (hier Simulationsdaten einer Stroemungssimulation)^[[Download bitte hier](https://owncloud.gwdg.de/index.php/s/sAjEy9B8kIbzoYj) -- Achtung das sind 370MB].  Berechnen sie den Fehler der *truncated SVD* $\|A-A_{\hat r}\|$ f&uuml;r $\hat r = 10, 20, 40$ f&uuml;r beide Matrizen.
  1. **(T)** Was l&auml;sst sich bez&uuml;glich einer Kompression der Daten mittels SVD f&uuml;r die beiden Matrizen sagen. (Vergleichen sie die plots der Singul&auml;rwerte und beziehen sie sich auf die gegebene Formel f&uuml;r die Differenz).
  1. **(P+T)** F&uuml;r die "echten" Daten: Speichern sie die Faktoren der bei $\hat r$ abgeschnittenen SVD und vergleichen Sie den Speicherbedarf der Faktoren und der eigentlichen Matrix.
 
