--- a/vl_03.md
+++ b/vl_03.md
@@ -180,7 +180,7 @@ Sei $Q\in \mathbb R^{n\times n}$ eine orthogonale Matrix und sei $y\in \mathbb R
 \begin{equation*}
 \|y\|^2 = \|Qy \|^2
 \end{equation*}
-gilt. 
+gilt. (2 Punkte)
 
 ### Kleinste Quadrate und Mittelwert
 
@@ -188,7 +188,7 @@ Zeigen sie, dass der *kleinste Quadrate* Ansatz zur Approximation einer Datenwol
 \begin{equation*}
 (x_i, y_i), \quad i=1,2,\dotsc,N,
 \end{equation*}
-mittels einer konstanten Funktion $f(x)=w_1$ auf $w_1$ auf den Mittelwert der $y_i$ f&uuml;hrt.
+mittels einer konstanten Funktion $f(x)=w_1$ auf $w_1$ auf den Mittelwert der $y_i$ f&uuml;hrt. (6 Punkte)
 
 ### QR Zerlegung und Kleinstes Quadrate Problem (T) 
 
@@ -207,17 +207,17 @@ eine QR-Zerlegung von $A$. Zeigen sie, dass die L&ouml;sung von
 \end{equation*}
 ein kritischer Punkt (d.h. der Gradient $\nabla_w$ verschwindet) von
 \begin{equation*}
-w \mapsto \| Aw - y \|^2
+w \mapsto \frac 12 \| Aw - y \|^2
 \end{equation*}
-ist. **Hinweis**: Die Formel f&uuml;r den Gradienten wurde in der Vorlesung 02 hergeleitet.
+ist. **Hinweis**: Die Formel f&uuml;r den Gradienten wurde in der Vorlesung 02 hergeleitet. (6 Punkte)
 
 ### Eigenwerte Symmetrischer Matrizen (T)
 
-Zeigen Sie, dass Eigenwerte symmetrischer reeller Matrizen $A\in \mathbb R^{n\times n}$ immer reell sind.
+Zeigen Sie, dass Eigenwerte symmetrischer reeller Matrizen $A\in \mathbb R^{n\times n}$ immer reell sind. (3 Punkte)
 
 ### Singul&auml;rwertzerlegung und Eigenwerte (T)
 
-Zeigen Sie, dass die quadrierten Singul&auml;rwerte einer Matrix $A\in \mathbb R^{m\times n}$, $m>n$, genau die Eigenwerte der Matrix $A^TA$ sind und in welcher Beziehung sie mit den Eigenwerten von $AA^T$ stehen. **Hinweis**: hier ist "$m>n$" wichtig.
+Zeigen Sie, dass die quadrierten Singul&auml;rwerte einer Matrix $A\in \mathbb R^{m\times n}$, $m>n$, genau die Eigenwerte der Matrix $A^TA$ sind und in welcher Beziehung sie mit den Eigenwerten von $AA^T$ stehen. **Hinweis**: hier ist "$m>n$" wichtig. (6 Punkte)
 
 ### Python -- Laden und Speichern von Arrays
 
