--- a/vl_04.md
+++ b/vl_04.md
@@ -151,7 +151,7 @@ s_1^2 = \frac{1}{N-1}\sum_{i=1}^n \alpha_{i1}^2
 maximal wird. Mit der Matrix $\mathbf X$ aller Daten
 \begin{equation*}
 \mathbf X = \begin{bmatrix}
-x_1 & y_1 \\ x_2 & y_2 \\ \vdots & \vdots \\ x_N & x_N
+x_1 & y_1 \\ x_2 & y_2 \\ \vdots & \vdots \\ x_N & y_N
 \end{bmatrix} = 
 \begin{bmatrix}
 \mathbf x_1^T\\ \mathbf x_2^T  \\  \vdots \\ \mathbf x_N^T
@@ -211,7 +211,7 @@ als neue Koordinatenrichtungen mit
 \begin{equation*}
 s_1^2 \approx 0.85, \quad s_2^2 \approx 0.04,
 \end{equation*}
-was bereits eine deutliche Dominanz der $v_1$-Richtung -- genannt \emph{Hauptachse} zeigt.
+was bereits eine deutliche Dominanz der $v_1$-Richtung -- genannt \emph{Hauptachse} -- zeigt.
 
 Im Hinblick auf die n&auml;chste Vorlesung, in der wir Anwendungen und Eigenschaften der PCA untersuchen werden, noch ein Plot der Daten mit der $v_1$-Richtung als Linie eingezeichnet.
 
