vl 5 ready to sub

--- a/vl_05.md
+++ b/vl_05.md
@@ -24,7 +24,7 @@ Wir stellen uns 2-3 Fragen:
 
 In h&ouml;heren Dimensionen ist schon die graphische Darstellung der Daten ein Problem. Wir k&ouml;nnen aber alle m&ouml;glichen 2er Kombinationen der Daten in 2D plots visualisieren.
 
-![Iris Datenset 2D plots](bilder/05-all-pairs.png){#fig:05-iris-allpairs width="65%"}
+![Iris Datenset 2D plots](bilder/05-all-pairs.png){#fig:05-iris-allpairs width="75%"}
 
 Ein Blick auf die Diagonale zeigt schon, dass manche Merkmale besser geeignet als andere sind, um die Spezies zu unterscheiden, allerdings keine der Zweierkombinationen eine Eindeutige Diskriminierung erlaubt.
 
@@ -96,7 +96,64 @@ Die letzte Formel wird vielleicht klarer, wenn Jan sich &uuml;berlegt, dass f&uu
 \end{equation*}
 gegeben ist.
 
-Damit 
+Damit k&ouml;nnen wir mit 
+\begin{equation*}
+\bX - \tilde{\tilde {\bX}} = \bX(I-v_1v_1^T)
+\end{equation*}
+den Teil der Daten betrachten, der durch die Richtung $v_1$ nicht abgebildet wird (sozusagen den noch verbleibenden Teil). Jan kann nachrechnen, dass wiederum $U$ und $V$ die Singul&auml;rvektoren von $\bX-\tilde{\tilde {\bX}}$ bilden, mit jetzt $v_2$ als Richtung mit dem gr&ouml;&szlig;ten (verbleibenden) Singul&auml;rwert. 
+
+Das hei&szlig;t, dass der $k$-te Singul&auml;rvektor die $k$-te Hauptrichtung bildet.
+
+## Reduktion der Daten
+
+Ist die Datenmatrix mit linear abh&auml;ngigen Spalten besetzt, &auml;u&szlig;ert sich das in $\sigma_k = 0$ f&uuml;r ein $k<n$ (und alle noch folgenden Singul&auml;rwerte). Jan rechnet nach, dass dann
+\begin{equation*}
+\bX = \bX V_{k-1}V_{k-1}^T
+\end{equation*}
+wobei $V_{k-1}$ die Matrix der $k-1$ f&uuml;hrenden Singul&auml;rvektoren ist und das entsprechende
+\begin{equation*}
+\tilde \bX = \bX V_{k-1}
+\end{equation*}
+alle Informationen des Datensatzes in kleinerer Dimension parametrisiert.
+
+In der Praxis sind schon allein durch Messfehler exakte lineare Abh&auml;ngigkeiten sowiedurch die n&auml;herungsweise Bestimmung auf dem Computer das Auftreten von $\sigma_k =0$ quasi ausgeschlossen. Stattdessen werden Schwellwerte definiert, unterhalb derer die SVD abgeschnitten wird.
+
+Wie oben, werden dann die Daten $\tilde \bX=\bX V_{\hat k}$ in den (reduzierten) Koordinaten der Hauptachsen betrachtet sowie die Rekonstruktion $\hat \bX = \bX V_{\hat k}V_{\hat k}^T$, wobei der $V_{\hat k}$ die Matrix der $\hat k$ f&uuml;hrenden Singul&auml;rvektoren sind (mit Singul&auml;rwerten &uuml;berhalb des Schwellwertes).
+
+## Am Beispiel der Iris Daten
+
+Wir stellen die Daten noch einmal zentriert dar:
+
+![Iris Daten Zentriert](bilder/05-all-pairs-cntrd.png){#fig:05-iris-allpairs-cntrd width="75%"}
+
+
+F&uuml;r die Kovarianzmatrix der Iris Daten erhalten wir:
+```py
+Covariance matrix: 
+[[ 0.6857 -0.0424  1.2743  0.5163]
+ [-0.0424  0.19   -0.3297 -0.1216]
+ [ 1.2743 -0.3297  3.1163  1.2956]
+ [ 0.5163 -0.1216  1.2956  0.581 ]]
+```
+
+F&uuml;r die Singul&auml;rwerte:
+
+```py
+In: U, S, Vh = np.linalg.svd(data, full_matrices=False)
+
+In: print(S)
+Out: [25.1     6.0131  3.4137  1.8845]
+```
+Zwar ist hier kein Singul&auml;rwert nah an der Null, allerdings betr&auml;gt der Unterschied zwischen dem gr&ouml;&szlig;ten und dem kleinsten schon eine 10er Potenz, was auf eine starke Dominanz der ersten Hauptachsen hinweist. 
+
+In der Tat, plotten wir die Daten in den Koordinaten der Hauptachsen (also $\tilde \bX$), zeigen Bilder der $v_1$ oder $v_2$-Koordinaten klare Tendenzen in den Daten, w&auml;hrend die Plots der &uuml;brigen Richtungen wie eine zuf&auml;llige Punktwolke aussieht, vgl. Abbildung \@ref(fig:05-iris-allpairs-pcs).
+
+![Iris Datenset 2D plots in Hauptachsenkoordinaten](bilder/05-all-pairs-pcs.png){#fig:05-iris-allpairs-pcs width="75%"}
+
+Als letztes plotten wir noch $\hat {\bX}$ f&uuml;r $\hat k =2$. Das hei&szlig;t wir reduzieren die Daten auf die $v_1$ und $v_2$-Richtungen und betrachten die Rekonstruktion. Im Plot sehen wir, dass in gewissen Teilen die Daten gut rekonstruiert werden. Allerdings, hat $\hat{\bX}$ nur Rang $\operatorname{Rk} \hat {\bX}=2$ (warum?), sodass in den Plots notwendigerweise direkte lineare Abh&auml;ngigkeiten offenbar werden.
+
+![Iris Datenset -- rekonstruiert von $\hat k =2$ Hauptachsenkoordinaten](bilder/05-all-pairs-k2-rec.png){#fig:05-iris-allpairs-k2-rec width="75%"}
+
 
 ## Aufgaben
 
@@ -171,6 +228,14 @@ erzeugen, in das sie mittels
 axs[zeile, spalte].plot(xdaten, ydaten, 'o')
 ```
 die plots fuer die einzelnen targets "eintragen" koennen. Bitte die Achsen beschriften (die `legend` ist nicht unbedingt notwendig).
+
+### Kovarianz
+
+Zentrieren Sie den Datensatz (zum Beispiel unter Verwendung der `numpy.mean` Funktion) und berechnen Sie die Kovarianzmatrix.
+
+### Hauptachsentransformation
+
+Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung.
 
 ### Kovarianzmatrix (T)
 
