--- a/vl_05.md
+++ b/vl_05.md
@@ -50,7 +50,7 @@ Ist $\mathbf X\in \mathbb R^{N\times n}$ die Matrix mit den Datenvektoren $\bxi 
 \Cov(\bX) = \frac{1}{N-1}\bX^T \bX
 \end{equation*}
 
-Wir bemerken, dass auf der Hauptdiagonalen die Varianzen in Koordinatenrichtung stehen und in den Zeilen oder Spalten ein Mass daf\"ur, wie bspw. $\bxi$ und $\bxj$ korreliert sind. Gro&szlig;e Zahlen bedeuten eine gro&szlig;e Varianz oder eine starke Korrelation und umgekehrt. F\"ur die Datenanalyse k\"onnen wir $\Cov(\bX)$ wie folgt heranziehen. 
+Wir bemerken, dass auf der Hauptdiagonalen die Varianzen in Koordinatenrichtung stehen und in den Zeilen oder Spalten ein Mass daf&uuml;r, wie bspw. $\bxi$ und $\bxj$ korreliert sind. Gro&szlig;e Zahlen bedeuten eine gro&szlig;e Varianz oder eine starke Korrelation und umgekehrt. F&uuml;r die Datenanalyse k&ouml;nnen wir $\Cov(\bX)$ wie folgt heranziehen:
 
 ## Hauptachsentransformation
 
@@ -61,8 +61,8 @@ Matrix $V\in \mathbb R^{n\times n}$:
 \end{equation*}
 wobei $\tilde \bX$ die Daten in den neuen Koordinaten sind (die Basisvektoren sind dann die Zeilenvektoren von $V$). Wir wollen nun eine Basis finden, in der
 
-* $\Cov(X)$ eine Diagonalmatrix ist --- damit w&auml;ren alle Richtungen in den Daten *unkorreliert* und k&ouml;nnten *unabh&auml;ngig* voneinander betrachtet werden^[wir d&uuml;rfen aber nicht vergessen, dass Daten t&uuml;pischerweise nur eine Stichprobe von Beobachtungen eines Ph&auml;nomens sind. Die Unabh&auml;ngigkeit in den *features* gilt also nur f&uuml;r die gesammelten Daten aber in der Regel nicht f&uuml;r das Ph&auml;nomen. F&uuml;r normalverteilte Prozesse liefern die daten-basiert ermittelten Hauptrichtungen jedoch auch die Hauptrichtungen des zugrundeliegenden Ph&auml;nomens] -- und in der
-* die neuen Varianzen nach Gr&ouml;&szlig;e geordnet sind gleichzeitig die verf&uuml;gbare Varianz maximal in wenigen Richtungen konzentrieren.
+* $\Cov(\bX)$ eine Diagonalmatrix ist --- damit w&auml;ren alle Richtungen in den Daten *unkorreliert* und k&ouml;nnten *unabh&auml;ngig* voneinander betrachtet werden^[wir d&uuml;rfen aber nicht vergessen, dass Daten t&uuml;pischerweise nur eine Stichprobe von Beobachtungen eines Ph&auml;nomens sind. Die Unabh&auml;ngigkeit in den *features* gilt also nur f&uuml;r die gesammelten Daten aber in der Regel nicht f&uuml;r das Ph&auml;nomen. F&uuml;r normalverteilte Prozesse liefern die daten-basiert ermittelten Hauptrichtungen jedoch auch die Hauptrichtungen des zugrundeliegenden Ph&auml;nomens] --
+* und in der die neuen Varianzen nach Gr&ouml;&szlig;e geordnet sind gleichzeitig die verf&uuml;gbare Varianz maximal in wenigen Richtungen konzentrieren.
 
 Nachden den &Uuml;berlegungen im vorherigen Kapitel ist die erste Hauptrichtung durch den ersten rechten Singul&auml;rvektor $v_1\in \mathbb R^{n}$ der (*&ouml;konomischen*) Singul&auml;rwertzerlegung 
 \begin{equation*}
@@ -116,7 +116,7 @@ wobei $V_{k-1}$ die Matrix der $k-1$ f&uuml;hrenden Singul&auml;rvektoren ist un
 \end{equation*}
 alle Informationen des Datensatzes in kleinerer Dimension parametrisiert.
 
-In der Praxis sind schon allein durch Messfehler exakte lineare Abh&auml;ngigkeiten sowiedurch die n&auml;herungsweise Bestimmung auf dem Computer das Auftreten von $\sigma_k =0$ quasi ausgeschlossen. Stattdessen werden Schwellwerte definiert, unterhalb derer die SVD abgeschnitten wird.
+In der Praxis sind schon allein durch Messfehler exakte lineare Abh&auml;ngigkeiten sowie durch die n&auml;herungsweise Bestimmung auf dem Computer das Auftreten von $\sigma_k =0$ quasi ausgeschlossen. Stattdessen werden Schwellwerte definiert, unterhalb derer die SVD abgeschnitten wird.
 
 Wie oben, werden dann die Daten $\tilde \bX=\bX V_{\hat k}$ in den (reduzierten) Koordinaten der Hauptachsen betrachtet sowie die Rekonstruktion $\hat \bX = \bX V_{\hat k}V_{\hat k}^T$, wobei der $V_{\hat k}$ die Matrix der $\hat k$ f&uuml;hrenden Singul&auml;rvektoren sind (mit Singul&auml;rwerten &uuml;berhalb des Schwellwertes).
 
@@ -157,11 +157,46 @@ Als letztes plotten wir noch $\hat {\bX}$ f&uuml;r $\hat k =2$. Das hei&szlig;t 
 
 ## Aufgaben
 
-### Covarianzen
+### Kovarianzen (P+T)
 
-Erzeugen Sie f&uuml;r `N` aus `Nl = [10, 100, 1000]` zuf&auml;llige Vektoren `x` und `y` der L&auml;nge `N` und berechnen Sie jeweils die Covarianzmatrix f&uuml;r den Datensatz `X = [x, x, x*y, y]`. Interpretieren sie die Ergebnisse.
+Erzeugen Sie f&uuml;r `N` aus `Nl = [10, 1000, 100000]` zuf&auml;llige Vektoren `x` und `y` der L&auml;nge `N` und berechnen Sie
+f&uuml;r den Datensatz `X = [x, x, x*y, y]`
+jeweils die Matrix der Korrelationskoeffizienten 
+\begin{equation*}
+\rho _{i\;j} = \frac{s_{i\, j}}{s_i \cdot s_j}
+\end{equation*}
+wobei $s_{i\,j}$ die Kovarianz der Daten $\bxi$ und $\bxj$ ist und $s_{i}$ die Varianz von $\bxi$. Interpretieren sie die Ergebnisse.
 
-### Iris Datensatz -- Targets Plotten
+**Hinweis**: Weil Zuf&auml;lligkeit involviert ist, ist die Interpretation manchmal schwierig. Lassen sie das Programm &ouml;fter laufen und beobachten sie verschiedene Realisierungen der Stichproben.
+
+```py
+import numpy as np
+
+# N = 10
+
+x = np.random.randn(10, 1)
+y = np.random.randn(10, 1)
+
+X = np.hstack([x, x, x*y, y])
+
+Xcntrd = X - X.mean(axis=0)
+# zentrieren der Daten
+
+# Kovarianz Matrix ausrechnen
+covX = 1/(10-1)*Xcntrd.T @ Xcntrd
+
+# Varianzen -- stehen auf der Diagonalen im Quadrat
+varvec = np.sqrt(np.diagonal(covX)).reshape(4, 1)
+# Matrix mit den Kombinationen aller Varianzen
+varmat = varvec @ varvec.T
+
+matcc = covX * 1/varmat
+
+print(f'N={10} : Matrix of Correlation Coefficients=')
+print(matcc)
+```
+
+### Iris Datensatz -- Targets Plotten (P)
 
 Laden Sie die [Iris Datensatz](bilder/iris-data.json) (hier als `json` file bereitgestellt) und plotten sie `petal width` versus `sepal length` f&uuml;r die drei Spezies `setosa`, `versicolor`, `virginica` in drei separaten Grafiken.
 
@@ -217,7 +252,7 @@ verwendet, die alle f&uuml;r verschiedene Zwecke gerne benutzt werden. Z.B.
  * `arrays` -- Matrix/Vektor von Daten eines Typs, mit denen *gerechnet* werden kann
  * `dictionaries` -- ein *Lookup table*. Objekte k&ouml;nnen &uuml;ber einen Namen addressiert werden. Ich nehme sie gerne um Daten mit ihrem Namen zum Beispiel als `json` file zu speichern.
 
-### Iris Datensatz -- 2D plots
+### Iris Datensatz -- 2D plots (P)
 
 Erzeugen sie Abbildung \@ref(fig:05-iris-allpairs) zum Beispiel &uuml;ber ein `4x4` Feld von subplots
 ```py
@@ -229,17 +264,17 @@ axs[zeile, spalte].plot(xdaten, ydaten, 'o')
 ```
 die plots fuer die einzelnen targets "eintragen" koennen. Bitte die Achsen beschriften (die `legend` ist nicht unbedingt notwendig).
 
-### Kovarianz
+### Kovarianz (P)
 
 Zentrieren Sie den Datensatz (zum Beispiel unter Verwendung der `numpy.mean` Funktion) und berechnen Sie die Kovarianzmatrix.
 
-### Hauptachsentransformation
+### Hauptachsentransformation (P)
 
-Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung.
+Berechnen sie Hauptachsen und stellen Sie die Daten in den Hauptachsenkoordinaten dar (wie in Abbildung \@ref(fig:05-iris-allpairs-pcs)).
 
 ### Kovarianzmatrix (T)
 
-Zeigen sie, dass f\"ur zentrierte Datens\"atze $\bX\in \mathbb R^{N\times n}$ gilt, dass
+Zeigen sie, dass f&uuml;r zentrierte Datens&auml;tze $\bX\in \mathbb R^{N\times n}$ gilt, dass
 \begin{equation*}
 \Cov(X) = \frac{1}{N-1}\bX^T\bX.
 \end{equation*}
